added simple chat_bot based on borrr

--- a/simple_algorithm/simple_algorithm.vcxproj
+++ b/simple_algorithm/simple_algorithm.vcxproj
@@ -121,7 +121,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bor.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Bor.h" />
+    <ClInclude Include="Str.h" />
+    <ClInclude Include="Xml.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
